- Fixed index declaration using objects/arrays from other contexts (Issue #755, https://github.com/sokra/node-mongodb-native)
- Intermittent (and rare) null callback exception when using ReplicaSets (Issue #752)
- Force correct setting of read_secondary based on the read preference (Issue #741)
- If using read preferences with secondaries queries will not fail if primary is down (Issue #744)

1.1.11 2012-10-10
-----------------
- Removed strict mode and introduced normal handling of safe at DB level.

1.1.10 2012-10-08
-----------------
- fix Admin.serverStatus (Issue #723, https://github.com/Contra)
- logging on connection open/close(Issue #721, https://github.com/asiletto)
- more fixes for windows bson install (Issue #724)

1.1.9 2012-10-05
----------------
- Updated bson to 0.1.5 to fix build problem on sunos/windows.

1.1.8 2012-10-01
----------------
- Fixed db.eval to correctly handle system.js global javascript functions (Issue #709)
- Cleanup of non-closing connections (Issue #706)
- More cleanup of connections under replicaset (Issue #707, https://github.com/elbert3)
- Set keepalive on as default, override if not needed
- Cleanup of jsbon install to correctly build without install.js script (https://github.com/shtylman)
- Added domain socket support new Server("/tmp/mongodb.sock") style

1.1.7 2012-09-10
----------------
- Protect against starting PingStrategy being called more than once (Issue #694, https://github.com/aheckmann)
- Make PingStrategy interval configurable (was 1 second, relaxed to 5) (Issue #693, https://github.com/aheckmann)
- Made PingStrategy api more consistant, callback to start/stop methods are optional (Issue #693, https://github.com/aheckmann)
- Proper stopping of strategy on replicaset stop
- Throw error when gridstore file is not found in read mode (Issue #702, https://github.com/jbrumwell)
- Cursor stream resume now using nextTick to avoid duplicated records (Issue #696)

1.1.6 2012-09-01
----------------